--- a/Jupiter/Buy a flat - task.ipynb
+++ b/Jupiter/Buy a flat - task.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b66e9efb",
+   "id": "912a3e97",
    "metadata": {},
    "source": [
     "# TASK Buy a flat\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5848fa21",
+   "id": "8e0bd494",
    "metadata": {},
    "source": [
     "### import package"
@@ -26,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "4fd76666",
+   "execution_count": 202,
+   "id": "5771781f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2de8d8e9",
+   "id": "844bccf0",
    "metadata": {},
    "source": [
     "### constant value"
@@ -46,8 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "decc60cf",
+   "execution_count": 203,
+   "id": "3179c50f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9fd11dc",
+   "id": "73150282",
    "metadata": {},
    "source": [
     "#### Question 1 - How much will be cost flat after 5 years?"
@@ -66,8 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "14fa4c74",
+   "execution_count": 204,
+   "id": "c57c8816",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4caa0953",
+   "id": "44e1d258",
    "metadata": {},
    "source": [
     "#### Question 2 - How much you have to deposite into locate to get full amount?"
@@ -93,8 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "829f685e",
+   "execution_count": 205,
+   "id": "b552e7c8",
    "metadata": {},
    "outputs": [
     {
@@ -105,6 +105,17 @@
       " [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24\n",
       " 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48\n",
       " 49 50 51 52 53 54 55 56 57 58 59 60]\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'sorted'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/dl/n6r7g5t96w30wn8vg3gb44640000gn/T/ipykernel_13505/2086744566.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mperiods\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnper\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Array of periods\\n {periods}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mperiods_reversed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mperiods\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'sorted'"
      ]
     }
    ],
@@ -118,8 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "f2da21e4",
+   "execution_count": 206,
+   "id": "c308219e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "1e5bc789",
+   "execution_count": 207,
+   "id": "269550ac",
    "metadata": {},
    "outputs": [],
    "source": [
     "def value_for_each_mounth (k, percent_for_year, number_of_periods_in_year, number_of_mounth):\n",
     "    array = []\n",
-    "    for i in range(1, number_of_mounth + 1):\n",
+    "    for i in range(number_of_mounth):\n",
     "        array = array + [value_after_periods(k, percent_for_year, number_of_periods_in_year, i)]\n",
     "    numpy_array = np.around(array,2)\n",
     "    return numpy_array"
@@ -145,8 +156,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
-   "id": "1c575274",
+   "execution_count": 208,
+   "id": "232b3b50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,18 +171,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
-   "id": "1a769e02",
+   "execution_count": 209,
+   "id": "41efcc57",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.01\n",
-      "0.012244447684901773\n",
       "Całkowita kwota 153153.79\n",
-      "1875.2835387883135\n",
       "Installment 1875.28\n"
      ]
     }
@@ -183,24 +191,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
-   "id": "fa65f759",
+   "execution_count": 210,
+   "id": "c56dd41d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1875.29 1894.04 1912.98 1932.11 1951.43 1970.95 1990.66 2010.56 2030.67\n",
-      " 2050.97 2071.48 2092.2  2113.12 2134.25 2155.59 2177.15 2198.92 2220.91\n",
-      " 2243.12 2265.55 2288.21 2311.09 2334.2  2357.54 2381.12 2404.93 2428.98\n",
-      " 2453.27 2477.8  2502.58 2527.6  2552.88 2578.41 2604.19 2630.23 2656.54\n",
-      " 2683.1  2709.93 2737.03 2764.4  2792.05 2819.97 2848.17 2876.65 2905.42\n",
-      " 2934.47 2963.81 2993.45 3023.39 3053.62 3084.16 3115.   3146.15 3177.61\n",
-      " 3209.39 3241.48 3273.89 3306.63 3339.7  3373.1 ]\n",
-      "Sum 153154.09\n",
-      "Is enough True\n",
-      "Difference is 0.3025000000197906\n"
+      "[1875.28 1894.04 1912.98 1932.11 1951.43 1970.94 1990.65 2010.56 2030.66\n",
+      " 2050.97 2071.48 2092.19 2113.12 2134.25 2155.59 2177.15 2198.92 2220.91\n",
+      " 2243.12 2265.55 2288.2  2311.08 2334.2  2357.54 2381.11 2404.92 2428.97\n",
+      " 2453.26 2477.8  2502.57 2527.6  2552.87 2578.4  2604.19 2630.23 2656.53\n",
+      " 2683.1  2709.93 2737.03 2764.4  2792.04 2819.96 2848.16 2876.64 2905.41\n",
+      " 2934.46 2963.81 2993.45 3023.38 3053.61 3084.15 3114.99 3146.14 3177.6\n",
+      " 3209.38 3241.47 3273.89 3306.63 3339.69 3373.09]\n",
+      "Sum 153153.78\n",
+      "Is enough False\n",
+      "Difference is -0.00750000003608875\n"
      ]
     }
    ],
@@ -218,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1974508",
+   "id": "5d855d14",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -226,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb2f6772",
+   "id": "c50668e3",
    "metadata": {},
    "outputs": [],
    "source": []
