calculate cost of flat and installment

--- a/Jupiter/Buy a flat - task.ipynb
+++ b/Jupiter/Buy a flat - task.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "912a3e97",
+   "id": "96f1bd93",
    "metadata": {},
    "source": [
     "# TASK Buy a flat\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e0bd494",
+   "id": "58edd387",
    "metadata": {},
    "source": [
     "### import package"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "5771781f",
+   "id": "5e43d6fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "844bccf0",
+   "id": "03691387",
    "metadata": {},
    "source": [
     "### constant value"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "3179c50f",
+   "id": "39bda4e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73150282",
+   "id": "f376a26b",
    "metadata": {},
    "source": [
     "#### Question 1 - How much will be cost flat after 5 years?"
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "id": "c57c8816",
+   "id": "bc3bf304",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44e1d258",
+   "id": "83092ae3",
    "metadata": {},
    "source": [
     "#### Question 2 - How much you have to deposite into locate to get full amount?"
@@ -93,8 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
-   "id": "b552e7c8",
+   "execution_count": 211,
+   "id": "0c7237da",
    "metadata": {},
    "outputs": [
     {
@@ -106,31 +106,19 @@
       " 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48\n",
       " 49 50 51 52 53 54 55 56 57 58 59 60]\n"
      ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'sorted'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/dl/n6r7g5t96w30wn8vg3gb44640000gn/T/ipykernel_13505/2086744566.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mperiods\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnper\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Array of periods\\n {periods}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mperiods_reversed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mperiods\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'sorted'"
-     ]
     }
    ],
    "source": [
     "periods_in_year = 12\n",
     "nper = 5 * 12 #five years * number of mounth\n",
     "periods = np.arange(1,nper+1,dtype=int)\n",
-    "print(f\"Array of periods\\n {periods}\")\n",
-    "periods_reversed = periods.sorted()"
+    "print(f\"Array of periods\\n {periods}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
-   "id": "c308219e",
+   "execution_count": 212,
+   "id": "6a18c975",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,8 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
-   "id": "269550ac",
+   "execution_count": 213,
+   "id": "700f0d9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,8 +144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
-   "id": "232b3b50",
+   "execution_count": 214,
+   "id": "bea9258d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,8 +159,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
-   "id": "41efcc57",
+   "execution_count": 215,
+   "id": "562c50a0",
    "metadata": {},
    "outputs": [
     {
@@ -186,13 +174,13 @@
    ],
    "source": [
     "installment = find_amount(flat_cost_5_years, nper, interest_on_bank_locate, periods_in_year)\n",
-    "print(f\"Installment {installment:.2f}\") #1856.72"
+    "print(f\"Installment {installment:.2f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
-   "id": "c56dd41d",
+   "execution_count": 216,
+   "id": "eb5c496e",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d855d14",
+   "id": "af28cde9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -234,7 +222,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c50668e3",
+   "id": "b8f5d3c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b3a65d5",
    "metadata": {},
    "outputs": [],
    "source": []
