--- a/Jupiter/Buy a flat - task.ipynb
+++ b/Jupiter/Buy a flat - task.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "50817afd",
+   "id": "2ac6ba42",
    "metadata": {},
    "source": [
     "# TASK Buy a flat\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec238195",
+   "id": "f0cc364a",
    "metadata": {},
    "source": [
     "### import package"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "4be7f629",
+   "id": "424c8e07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abe7b1b4",
+   "id": "bf30ea61",
    "metadata": {},
    "source": [
     "### constant value"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "b5127a77",
+   "id": "cb6c4a48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dda24c1",
+   "id": "33f70d61",
    "metadata": {},
    "source": [
     "#### Question 1 - How much will be cost flat after 5 years?"
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "id": "10942ffc",
+   "id": "fc878563",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9267897",
+   "id": "89cd1c61",
    "metadata": {},
    "source": [
     "#### Question 2 - How much you have to deposite into locate to get full amount?"
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "021fb6e8",
+   "id": "9d109271",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "0c1f246a",
+   "id": "56a82731",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,8 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
-   "id": "a05d0406",
+   "execution_count": 240,
+   "id": "e218608a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,14 +138,14 @@
     "    array = []\n",
     "    for i in range(number_of_mounth):\n",
     "        array = array + [value_after_periods(k, percent_for_year, number_of_periods_in_year, i)]\n",
-    "    numpy_array = np.around(array,2)\n",
+    "    numpy_array = np.array(array)\n",
     "    return numpy_array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
-   "id": "1a8c54a1",
+   "execution_count": 241,
+   "id": "a80bc53f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,21 +153,19 @@
     "    quotient = (1 + (percent_for_year / number_of_periods_in_year))\n",
     "    factor = (((1 - quotient) / (1 - (quotient ** number_of_periods))))\n",
     "    result = cost * factor\n",
-    "    print(f\"Całkowita kwota {(result / factor):.2f}\")\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
-   "id": "222351f6",
+   "execution_count": 242,
+   "id": "26be41a7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Całkowita kwota 153153.79\n",
       "Installment 1875.28\n"
      ]
     }
@@ -179,24 +177,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
-   "id": "61547493",
+   "execution_count": 243,
+   "id": "fbaf78fa",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1875.28 1894.04 1912.98 1932.11 1951.43 1970.94 1990.65 2010.56 2030.66\n",
-      " 2050.97 2071.48 2092.19 2113.12 2134.25 2155.59 2177.15 2198.92 2220.91\n",
-      " 2243.12 2265.55 2288.2  2311.08 2334.2  2357.54 2381.11 2404.92 2428.97\n",
-      " 2453.26 2477.8  2502.57 2527.6  2552.87 2578.4  2604.19 2630.23 2656.53\n",
-      " 2683.1  2709.93 2737.03 2764.4  2792.04 2819.96 2848.16 2876.64 2905.41\n",
-      " 2934.46 2963.81 2993.45 3023.38 3053.61 3084.15 3114.99 3146.14 3177.6\n",
-      " 3209.38 3241.47 3273.89 3306.63 3339.69 3373.09]\n",
-      "Sum 153153.78\n",
-      "Is enough False\n",
-      "Difference is -0.00750000003608875\n"
+      "[1875.28353879 1894.03637418 1912.97673792 1932.1065053  1951.42757035\n",
+      " 1970.94184605 1990.65126451 2010.55777716 2030.66335493 2050.96998848\n",
+      " 2071.47968836 2092.19448525 2113.1164301  2134.2475944  2155.59007035\n",
+      " 2177.14597105 2198.91743076 2220.90660507 2243.11567112 2265.54682783\n",
+      " 2288.20229611 2311.08431907 2334.19516226 2357.53711388 2381.11248502\n",
+      " 2404.92360987 2428.97284597 2453.26257443 2477.79520017 2502.57315218\n",
+      " 2527.5988837  2552.87487253 2578.40362126 2604.18765747 2630.22953405\n",
+      " 2656.53182939 2683.09714768 2709.92811916 2737.02740035 2764.39767435\n",
+      " 2792.0416511  2819.96206761 2848.16168828 2876.64330517 2905.40973822\n",
+      " 2934.4638356  2963.80847396 2993.4465587  3023.38102428 3053.61483453\n",
+      " 3084.15098287 3114.9924927  3146.14241763 3177.6038418  3209.37988022\n",
+      " 3241.47367902 3273.88841581 3306.62729997 3339.69357297 3373.0905087 ]\n",
+      "Sum 153153.79\n",
+      "Is enough True\n",
+      "Difference is 0.0\n"
      ]
     }
    ],
@@ -213,8 +216,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
-   "id": "94ccfa6c",
+   "execution_count": 244,
+   "id": "4f0f2e75",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f0ecb32",
+   "id": "2e835d85",
    "metadata": {},
    "source": [
     "#### Question 3 - Plot"
@@ -239,30 +242,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
-   "id": "84498006",
+   "execution_count": 245,
+   "id": "be57acba",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1875.28 1894.04 1912.98 1932.11 1951.43 1970.94 1990.65 2010.56 2030.66\n",
-      " 2050.97 2071.48 2092.19 2113.12 2134.25 2155.59 2177.15 2198.92 2220.91\n",
-      " 2243.12 2265.55 2288.2  2311.08 2334.2  2357.54 2381.11 2404.92 2428.97\n",
-      " 2453.26 2477.8  2502.57 2527.6  2552.87 2578.4  2604.19 2630.23 2656.53\n",
-      " 2683.1  2709.93 2737.03 2764.4  2792.04 2819.96 2848.16 2876.64 2905.41\n",
-      " 2934.46 2963.81 2993.45 3023.38 3053.61 3084.15 3114.99 3146.14 3177.6\n",
-      " 3209.38 3241.47 3273.89 3306.63 3339.69 3373.09]\n",
-      "[  1875.28   3769.32   5682.3    7614.41   9565.84  11536.78  13527.43\n",
-      "  15537.99  17568.65  19619.62  21691.1   23783.29  25896.41  28030.66\n",
-      "  30186.25  32363.4   34562.32  36783.23  39026.35  41291.9   43580.1\n",
-      "  45891.18  48225.38  50582.92  52964.03  55368.95  57797.92  60251.18\n",
-      "  62728.98  65231.55  67759.15  70312.02  72890.42  75494.61  78124.84\n",
-      "  80781.37  83464.47  86174.4   88911.43  91675.83  94467.87  97287.83\n",
-      " 100135.99 103012.63 105918.04 108852.5  111816.31 114809.76 117833.14\n",
-      " 120886.75 123970.9  127085.89 130232.03 133409.63 136619.01 139860.48\n",
-      " 143134.37 146441.   149780.69 153153.78]\n"
+      "[1875.28353879 1894.03637418 1912.97673792 1932.1065053  1951.42757035\n",
+      " 1970.94184605 1990.65126451 2010.55777716 2030.66335493 2050.96998848\n",
+      " 2071.47968836 2092.19448525 2113.1164301  2134.2475944  2155.59007035\n",
+      " 2177.14597105 2198.91743076 2220.90660507 2243.11567112 2265.54682783\n",
+      " 2288.20229611 2311.08431907 2334.19516226 2357.53711388 2381.11248502\n",
+      " 2404.92360987 2428.97284597 2453.26257443 2477.79520017 2502.57315218\n",
+      " 2527.5988837  2552.87487253 2578.40362126 2604.18765747 2630.22953405\n",
+      " 2656.53182939 2683.09714768 2709.92811916 2737.02740035 2764.39767435\n",
+      " 2792.0416511  2819.96206761 2848.16168828 2876.64330517 2905.40973822\n",
+      " 2934.4638356  2963.80847396 2993.4465587  3023.38102428 3053.61483453\n",
+      " 3084.15098287 3114.9924927  3146.14241763 3177.6038418  3209.37988022\n",
+      " 3241.47367902 3273.88841581 3306.62729997 3339.69357297 3373.0905087 ]\n",
+      "[  1875.28353879   3769.31991296   5682.29665088   7614.40315618\n",
+      "   9565.83072653  11536.77257258  13527.4238371   15537.98161426\n",
+      "  17568.64496919  19619.61495767  21691.09464603  23783.28913128\n",
+      "  25896.40556138  28030.65315578  30186.24322613  32363.38919718\n",
+      "  34562.30662794  36783.21323301  39026.32890413  41291.87573196\n",
+      "  43580.07802806  45891.16234713  48225.35750939  50582.89462328\n",
+      "  52964.0071083   55368.93071817  57797.90356414  60251.16613857\n",
+      "  62728.96133874  65231.53449092  67759.13337461  70312.00824715\n",
+      "  72890.41186841  75494.59952588  78124.82905993  80781.36088932\n",
+      "  83464.458037    86174.38615616  88911.41355651  91675.81123086\n",
+      "  94467.85288196  97287.81494956 100135.97663785 103012.61994301\n",
+      " 105918.02968123 108852.49351683 111816.30199079 114809.74854949\n",
+      " 117833.12957377 120886.7444083  123970.89539117 127085.88788387\n",
+      " 130232.03030149 133409.6341433  136619.01402352 139860.48770254\n",
+      " 143134.37611836 146441.00341833 149780.6969913  153153.7875    ]\n"
      ]
     }
    ],
@@ -274,8 +288,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
-   "id": "dcda6a8d",
+   "execution_count": 246,
+   "id": "66fb8706",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c25feb5c",
+   "id": "ec9bcb89",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -316,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 235,
-   "id": "46f6f747",
+   "id": "efae4f54",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89afce02",
+   "id": "c9fe67f6",
    "metadata": {},
    "outputs": [],
    "source": []
