task 8.3 interventions USA

--- a/Jupiter/The_best-selling_albums_of_all_time.ipynb
+++ b/Jupiter/The_best-selling_albums_of_all_time.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "95a0fbda",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "deba2a8e",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
        "list"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "11260e64",
    "metadata": {},
    "outputs": [
@@ -717,7 +717,7 @@
        "59  1992          1  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "4a9878f3",
    "metadata": {},
    "outputs": [],
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "284ce156",
    "metadata": {},
    "outputs": [
@@ -824,7 +824,7 @@
        "4    5        WHAT'S THE STORY MORNING GLORY    OASIS  1995          1"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "id": "2da3bd96",
    "metadata": {},
    "outputs": [
@@ -868,11 +868,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Lp</th>\n",
-       "      <th>Tytul</th>\n",
-       "      <th>Artysta</th>\n",
+       "      <th>LP</th>\n",
+       "      <th>TYTUL</th>\n",
+       "      <th>ARTYSTA</th>\n",
        "      <th>ROK</th>\n",
-       "      <th>Max Poz</th>\n",
+       "      <th>MAX POZ</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -921,7 +921,7 @@
        "</div>"
       ],
       "text/plain": [
-       "   Lp                                 Tytul  Artysta   ROK  Max Poz\n",
+       "   LP                                 TYTUL  ARTYSTA   ROK  MAX POZ\n",
        "0   1                         GREATEST HITS    QUEEN  1981        1\n",
        "1   2                  GOLD - GREATEST HITS     ABBA  1992        1\n",
        "2   3  SGT PEPPER'S LONELY HEARTS CLUB BAND  BEATLES  1967        1\n",
@@ -929,7 +929,7 @@
        "4   5        WHAT'S THE STORY MORNING GLORY    OASIS  1995        1"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "69de6e84",
    "metadata": {},
    "outputs": [
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "73f9f137",
    "metadata": {},
    "outputs": [
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "b50f59ca",
    "metadata": {},
    "outputs": [
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "id": "2162eb42",
    "metadata": {},
    "outputs": [
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "id": "b1c18fe2",
    "metadata": {},
    "outputs": [
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 14,
    "id": "af664c01",
    "metadata": {},
    "outputs": [
@@ -1236,7 +1236,7 @@
        "9  10                      GREATEST HITS II            QUEEN  1991"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 15,
    "id": "3c4e0f96",
    "metadata": {},
    "outputs": [
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 16,
    "id": "eba78915",
    "metadata": {},
    "outputs": [
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 17,
    "id": "6e392c79",
    "metadata": {},
    "outputs": [
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 18,
    "id": "acafa996",
    "metadata": {},
    "outputs": [
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 19,
    "id": "ec3b2bd4",
    "metadata": {},
    "outputs": [
@@ -1641,7 +1641,7 @@
        "48                                       X"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
