task 8.2 - add comment and summary

--- a/Jupiter/The_best-selling_albums_of_all_time.ipynb
+++ b/Jupiter/The_best-selling_albums_of_all_time.ipynb
@@ -1672,9 +1672,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a3b5a3ff",
+   "metadata": {},
+   "source": [
+    "### PODSUMOWANIE\n",
+    "Zadanie polegało na wykonaniu następujących zadań:\n",
+    "1. Zamień nagłówki kolumn na polskie odpowiedniki: ['TYTUŁ','ARTYSTA','ROK','MAX POZ']\n",
+    "2. Ilu pojedynczych artystów znajduje się na liście?\n",
+    "3. Które zespoły pojawiają się najczęściej na liście?\n",
+    "4. Zmień nagłówki kolumn, tak aby każdy z nich rozpoczynał się od wielkiej litery, a pozostałe były wprowadzone małymi literami.\n",
+    "5. Wyrzuć z tabeli kolumnę ‘Max Poz’.\n",
+    "6. W którym roku wyszło najwięcej albumów znajdujących się na liście?\n",
+    "7. Ile albumów wydanych między 1960 a 1990 rokiem włącznie znajduje się na liście?\n",
+    "8. W którym roku wydany został najmłodszy album na liście?\n",
+    "9. Przygotuj listę najwcześniej wydanych albumów każdego artysty, który znalazł się na liście.\n",
+    "10. Listę zapisz do pliku csv.\n",
+    "\n",
+    "Punkty 1, 4, 5 oraz 10 nie wymagają szerszego opisu.\n",
+    "\n",
+    "#### 2. Ilu pojedynczych artystów znajduje się na liście?\n",
+    "Zgodnie z odpowiedzią, w zestawienu jest 47 unikalnych artystów. Bazowa lista zawierała 60 tytułów albumów, stąd łatwo wysunąć wniosek, że jeden lub więcej artystów musiał pojawić się w zestawieniu więcej niż z jednym albumem. Dalej przeanalizowano to w pytaniu 3.\n",
+    "\n",
+    "#### 3. Które zespoły pojawiają się najczęściej na liście?\n",
+    "Odpowiedź z pytania 2 od razu nasuwa nam przeanalizowanie, którzy artyści są najbardziej popularni, lub, co bardziej poprawne, wytworzyli najwięcej popularnych albumów muzycznych. Wyniki pokazują, że takich zespołów jest 11, z czego dwa z nich COLDPLAY oraz TAKE THAT posiadają aż po 3 albumy w zestawieniu popularnych albumów wszech czasów. Oznacza to, że 36 artystów posiada po jednym albumie w zestawieniu.\n",
+    "\n",
+    "                     ILOSC POJAWIEN W ZESTAWIENIU\n",
+    "1. COLDPLAY                                        3\n",
+    "2. TAKE THAT                                       3\n",
+    "3. FLEETWOOD MAC                                   2\n",
+    "4. ABBA                                            2\n",
+    "5. DIDO                                            2\n",
+    "6. ORIGINAL SOUNDTRACK                             2\n",
+    "7. QUEEN                                           2\n",
+    "8. ROBBIE WILLIAMS                                 2\n",
+    "9. BEATLES                                         2\n",
+    "10. MICHAEL JACKSON                                 2\n",
+    "11. ADELE                                           2\n",
+    "\n",
+    "#### 6. W którym roku wyszło najwięcej albumów znajdujących się na liście?\n",
+    "Najwięcej albumów pojawiło się w 1987 oraz 2000 roku, gdzie były po 4 albumy: \n",
+    "\"DIRTY DANCING\" orginalny ORIGINAL SOUNDTRACK filmu o tym tytule, THE JOSHUA TREE zespołu U2, BAD artysty MICHAEL JACKSON oraz TANGO IN THE NIGHT zespołu FLEETWOOD MAC dla roku 1987.\n",
+    "\"1\" zespołu BEATLES, NO ANGEL zespołu DIDO, PARACHUTES zespołu COLDPLAY oraz THE MARSHALL MATHERS LP arytsty EMINEM dla roku 2000.\n",
+    "\n",
+    "#### 7. Ile albumów wydanych między 1960 a 1990 rokiem włącznie znajduje się na liście? oraz 8. W którym roku wydany został najmłodszy album na liście?\n",
+    "Ilość albumów wydanych między 1960 a 1990 wynosi 22, czyli ponad 1/3 albumów wydana była w tych latach. Biorąc pod uwagę, że najstarszy album z zestawienia wydano w 1965, pierwsze 5 lat w wybranym zakresie można pominąć. Najmłodszy album (co jest również odpowiedzią na pytanie 8) wydano w 2015 roku. 1990 - 1965 = 25, oraz 2015 - 1990 = 25, oznacza to, że w zestawieniu jest więcej albumów \"młodszych\" niż \"starszych\".\n",
+    "\n",
+    "#### 9. Przygotuj listę najwcześniej wydanych albumów każdego artysty, który znalazł się na liście.\n",
+    "Samo polecenie nie odpowieda na pytanie, ważnym jest jednak zaznaczenie, że wybieramy tylko 47 albumów (bo tylu jest unikalnych artystów - pytanie 2). Uwzględniając to z analizą pytania 3 łatwo zauważyć, że pominiemy w zestawieniu po dwa albumy COLDPLAY i TAKE THAT oraz po jednym albymie następujących zespołów/wykonawców: FLEETWOOD MAC, ABBA, DIDO, ORIGINAL SOUNDTRACK (co może być mylące, bo dotyczy dwóch różnych filmów), QUEENROBBIE WILLIAMS, BEATLES, MICHAEL JACKSON i ADELE. Należało by zastanowić się, czy \"ORIGINAL SOUNTRACK\" nie potraktować jako wyjątek przy tej analizie, bo nazwa artysty jest tu myląca (GREASE\tORIGINAL SOUNDTRACK z 1977, DIRTY DANCING\tORIGINAL SOUNDTRACK z 1987), gdyż dotyczy w rzeczywistości innych artystów."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb51d6f7",
+   "id": "593c484d",
    "metadata": {},
    "outputs": [],
    "source": []
