Global population - analysis by continent

--- a/Jupiter/training/SerialKiller/SerialKillers.ipynb
+++ b/Jupiter/training/SerialKiller/SerialKillers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a7533562",
+   "id": "86de9493",
    "metadata": {},
    "source": [
     "# Serial Killers\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f06d5d26",
+   "id": "207495a9",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "23bbadf3",
+   "id": "b135ba04",
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fcf464f9",
+   "id": "4775a8c3",
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42d7ba88",
+   "id": "58227e61",
    "metadata": {},
    "source": [
     "## 1. Analysis data and organise the data"
@@ -755,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bb79416e",
+   "id": "edcceb89",
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5decc401",
+   "id": "ef130b77",
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8c5d7be4",
+   "id": "fa8e26f8",
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "193c2efb",
+   "id": "34853481",
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b688f9ef",
+   "id": "f1199cb6",
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1418,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e53a7854",
+   "id": "f7c7b2e1",
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1612,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "43a43382",
+   "id": "ad299ff3",
    "metadata": {},
    "outputs": [
     {
@@ -1707,7 +1707,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b5770577",
+   "id": "eddfebe4",
    "metadata": {},
    "outputs": [
     {
@@ -2606,7 +2606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0347ffd6",
+   "id": "5b86487a",
    "metadata": {},
    "source": [
     "## Analiza ilości ofiar w zależności od czasu aktywności\n",
@@ -2616,7 +2616,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5731157d",
+   "id": "7653be2a",
    "metadata": {},
    "outputs": [
     {
@@ -2666,7 +2666,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e625de3f",
+   "id": "46a2f15f",
    "metadata": {},
    "outputs": [
     {
@@ -3077,7 +3077,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "da51e7d4",
+   "id": "1d3ebdf0",
    "metadata": {},
    "outputs": [
     {
@@ -3186,7 +3186,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "f68f6e82",
+   "id": "70d8be4b",
    "metadata": {},
    "outputs": [
     {
@@ -4676,7 +4676,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "1b7c22e7",
+   "id": "c9522d08",
    "metadata": {},
    "outputs": [
     {
@@ -4699,7 +4699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b16f220e",
+   "id": "7167d37f",
    "metadata": {},
    "source": [
     "## Analiza\n",
@@ -4707,8 +4707,16 @@
     "Ogólnie wnioski jakie można wyciągnąć, to fakt, że USA mają dość dużą skuteczność w łapaniu seryjnych morderców, ponieważ średnia ilość ofiar takiego mordercy wynosi ok. 11.72 osoby, a średnia dla wszystkich krajów jest już ponad 19. Jednak by potwierdzić ten wniosek trzeba by było przeanalizować dane ilości seryjnych morderców lub potencjalnych seryjnych morderców, którzy nigdy nie zostali złapani w każdym z badanych krajów.\n",
     "W kwestii bezpieczeństwa w danym kraju godne uwagi było by również zestawienie niewyjaśnionych morderstw oraz ilość morderstw w stosunku do ilości mieszkańców.\n",
     "Podsumowując. Powyższe dane dają bardzo ogólny pogląd na temat seryjnych morderców. Na tej podstawie można przeanalizować tylko podstawowe założenie i to na danych opartych dla pojmanych i skazancyh osób.\n",
-    "Ciekawa mogłaby się okazać też analiza seryjnych morderców ze względu na płeć. W danych co prawda jest imię i nazwisko mordercy, więc pozwala to w dość "
+    "Ciekawa mogłaby się okazać też analiza seryjnych morderców ze względu na płeć. W danych co prawda jest imię i nazwisko mordercy, więc pozwala to w dość dobrym stopniu określić płeć, jednak należy pamiętać, że są imiona nadawane niezależnie od płci (np. Alex), co może prowadzić do nieścisłości."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "764b9488",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
